@@ -1,9 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ImportGroup Label="PropertySheets">
-    <Import Project="..\..\..\..\WebKitLibraries\win\tools\vsprops\FeatureDefines.props" />
-    <Import Project="..\..\..\..\WebKitLibraries\win\tools\vsprops\common.props" />
-    <Import Project="..\..\..\..\WebKitLibraries\win\tools\vsprops\debug.props" />
+    <Import Project="$(WebKit_Libraries)\tools\vsprops\FeatureDefines.props" />
+    <Import Project="$(WebKit_Libraries)\tools\vsprops\common.props" />
+    <Import Project="$(WebKit_Libraries)\tools\vsprops\debug.props" />
     <Import Project="JavaScriptCoreExportGeneratorCommon.props" />
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
