@@ -97,6 +97,18 @@ Project("{8BC9CEB8-8B4A-11D0-8D11-00A0C91BC942}") = "JavaScriptCoreExportGenerat
 		{9221744B-5715-4F56-9590-42F7AB23DD8B} = {9221744B-5715-4F56-9590-42F7AB23DD8B}
 	EndProjectSection
 EndProject
+Project("{2150E333-8FDC-42A3-9474-1A3956D46DE8}") = "WinLauncher", "WinLauncher", "{20A8616C-E56B-4649-A910-8E97751DE145}"
+EndProject
+Project("{8BC9CEB8-8B4A-11D0-8D11-00A0C91BC942}") = "WinLauncherLib", "..\..\..\Tools\WinLauncher\WinLauncher.vcxproj\WinLauncherLib.vcxproj", "{114FCA11-216B-4C8C-957E-30A75AE80443}"
+	ProjectSection(ProjectDependencies) = postProject
+		{0662A8A9-82A3-4638-97D8-EC425D8D87C9} = {0662A8A9-82A3-4638-97D8-EC425D8D87C9}
+	EndProjectSection
+EndProject
+Project("{8BC9CEB8-8B4A-11D0-8D11-00A0C91BC942}") = "WinLauncher", "..\..\..\Tools\WinLauncher\WinLauncher.vcxproj\WinLauncher.vcxproj", "{767B10FB-76C1-44D0-8005-85ED7F9AA5E4}"
+	ProjectSection(ProjectDependencies) = postProject
+		{114FCA11-216B-4C8C-957E-30A75AE80443} = {114FCA11-216B-4C8C-957E-30A75AE80443}
+	EndProjectSection
+EndProject
 Global
 	GlobalSection(SolutionConfigurationPlatforms) = preSolution
 		Debug_All|Win32 = Debug_All|Win32
@@ -323,6 +335,30 @@ Global
 		{BB7E61B8-869E-45E7-8F12-0907D08C1F57}.Release_Cairo_CFLite|Win32.Build.0 = Release|Win32
 		{BB7E61B8-869E-45E7-8F12-0907D08C1F57}.Release|Win32.ActiveCfg = Release|Win32
 		{BB7E61B8-869E-45E7-8F12-0907D08C1F57}.Release|Win32.Build.0 = Release|Win32
+		{114FCA11-216B-4C8C-957E-30A75AE80443}.Debug_All|Win32.ActiveCfg = Debug|Win32
+		{114FCA11-216B-4C8C-957E-30A75AE80443}.Debug_All|Win32.Build.0 = Debug|Win32
+		{114FCA11-216B-4C8C-957E-30A75AE80443}.Debug_Cairo_CFLite|Win32.ActiveCfg = Debug|Win32
+		{114FCA11-216B-4C8C-957E-30A75AE80443}.Debug_Cairo_CFLite|Win32.Build.0 = Debug|Win32
+		{114FCA11-216B-4C8C-957E-30A75AE80443}.Debug|Win32.ActiveCfg = Debug|Win32
+		{114FCA11-216B-4C8C-957E-30A75AE80443}.Debug|Win32.Build.0 = Debug|Win32
+		{114FCA11-216B-4C8C-957E-30A75AE80443}.Production|Win32.ActiveCfg = Release|Win32
+		{114FCA11-216B-4C8C-957E-30A75AE80443}.Production|Win32.Build.0 = Release|Win32
+		{114FCA11-216B-4C8C-957E-30A75AE80443}.Release_Cairo_CFLite|Win32.ActiveCfg = Release|Win32
+		{114FCA11-216B-4C8C-957E-30A75AE80443}.Release_Cairo_CFLite|Win32.Build.0 = Release|Win32
+		{114FCA11-216B-4C8C-957E-30A75AE80443}.Release|Win32.ActiveCfg = Release|Win32
+		{114FCA11-216B-4C8C-957E-30A75AE80443}.Release|Win32.Build.0 = Release|Win32
+		{767B10FB-76C1-44D0-8005-85ED7F9AA5E4}.Debug_All|Win32.ActiveCfg = Debug|Win32
+		{767B10FB-76C1-44D0-8005-85ED7F9AA5E4}.Debug_All|Win32.Build.0 = Debug|Win32
+		{767B10FB-76C1-44D0-8005-85ED7F9AA5E4}.Debug_Cairo_CFLite|Win32.ActiveCfg = Debug|Win32
+		{767B10FB-76C1-44D0-8005-85ED7F9AA5E4}.Debug_Cairo_CFLite|Win32.Build.0 = Debug|Win32
+		{767B10FB-76C1-44D0-8005-85ED7F9AA5E4}.Debug|Win32.ActiveCfg = Debug|Win32
+		{767B10FB-76C1-44D0-8005-85ED7F9AA5E4}.Debug|Win32.Build.0 = Debug|Win32
+		{767B10FB-76C1-44D0-8005-85ED7F9AA5E4}.Production|Win32.ActiveCfg = Release|Win32
+		{767B10FB-76C1-44D0-8005-85ED7F9AA5E4}.Production|Win32.Build.0 = Release|Win32
+		{767B10FB-76C1-44D0-8005-85ED7F9AA5E4}.Release_Cairo_CFLite|Win32.ActiveCfg = Release|Win32
+		{767B10FB-76C1-44D0-8005-85ED7F9AA5E4}.Release_Cairo_CFLite|Win32.Build.0 = Release|Win32
+		{767B10FB-76C1-44D0-8005-85ED7F9AA5E4}.Release|Win32.ActiveCfg = Release|Win32
+		{767B10FB-76C1-44D0-8005-85ED7F9AA5E4}.Release|Win32.Build.0 = Release|Win32
 	EndGlobalSection
 	GlobalSection(SolutionProperties) = preSolution
 		HideSolutionNode = FALSE
@@ -346,5 +382,7 @@ Global
 		{0662A8A9-82A3-4638-97D8-EC425D8D87C9} = {39286F46-BA75-4997-8065-1909090A60F0}
 		{0F837117-8C0B-4596-A373-A37E14A01223} = {39286F46-BA75-4997-8065-1909090A60F0}
 		{A15EDAD8-8B87-4D4A-8498-77A04AB65F16} = {39286F46-BA75-4997-8065-1909090A60F0}
+		{114FCA11-216B-4C8C-957E-30A75AE80443} = {20A8616C-E56B-4649-A910-8E97751DE145}
+		{767B10FB-76C1-44D0-8005-85ED7F9AA5E4} = {20A8616C-E56B-4649-A910-8E97751DE145}
 	EndGlobalSection
 EndGlobal
